# Chaos_Compilers_COS214_Project_2025

./: .gitignore  Action.cpp  Action.h  AddStock.cpp  AddStock.h  Autumn.cpp  Available.cpp  Available.h  Browse.cpp  Browse.h  Busy.cpp  Busy.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CareStrategy.cpp  CareStrategy.h  Caretaker.cpp  Caretaker.h  Cashiers.cpp  Cashiers.h  Chaos_diagram.vpp  Class2.h  Command.cpp  Command.h  Customer.cpp  Customer.h  DOCUMENTATION.md  Dead.cpp  Dead.h  DemoMain.cpp  DemoName.cpp  Doxyfile  Enquire.cpp  Enquire.h  FLowerPlant.cpp  FLowerPlant.h  FindAvaibableStaff.cpp  FindAvaibableStaff.h  FindAvailableStaff.cpp  (+89 more)
.github/workflows/: ci-cd.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Report/: Report.md
gui/ChaoticPlants/: CMakeLists.txt  IMPLEMENTATION.md  QUICKSTART.md  README.md  THINKING_BUBBLES.md  main.cpp  nursary.cpp  nursary.h  nursary.ui  nursery.cpp  nursery.h  nursery.ui  run.sh
src/Customer/: Action.cpp  Action.h  Browse.cpp  Browse.h  Customer.cpp  Customer.h  CustomerCreator.cpp  CustomerCreator.h  CustomerSpawner.cpp  CustomerSpawner.h  Enquire.cpp  Enquire.h  Purchasing.cpp  Purchasing.h
src/Greenhouse/: AddStock.cpp  AddStock.h  Autumn.cpp  Autumn.h  AutumnCommand.cpp  AutumnCommand.h  CareStrategy.cpp  CareStrategy.h  Command.cpp  Command.h  Dead.cpp  Dead.h  FlowerPlant.cpp  FlowerPlant.h  FlowerPlanter.cpp  FlowerPlanter.h  FlowerStrategy.cpp  FlowerStrategy.h  GiftWrap.cpp  GiftWrap.h  HerbPlant.cpp  HerbPlant.h  HerbPlanter.cpp  HerbPlanter.h  HerbStrategy.cpp  HerbStrategy.h  Inventory.cpp  Inventory.h  Plant.cpp  Plant.h  PlantDecorator.cpp  PlantDecorator.h  PlantObserver.h  Planter.cpp  Planter.h  Pot.cpp  Pot.h  Prime.cpp  Prime.h  RemoveStock.cpp  (+43 more)
src/Nursery/: CMakeLists.txt  CTestTestfile.cmake  Clock.cpp  Clock.h  ClockObserver.h  CustomerClock.cpp  CustomerClock.h  Makefile  Nursery.cpp  Nursery.h  PlantClock.cpp  PlantClock.h  SeasonClock.cpp  SeasonClock.h  SeasonObserver.h  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h
src/Nursery/Nursery/: CMakeLists.txt  mainwindow.cpp
src/Staff/: Aggregate.h  Available.cpp  Available.h  Busy.cpp  Busy.h  Cashiers.cpp  Cashiers.h  ConcreteAggregate.cpp  ConcreteAggregate.h  ConcreteIterator.cpp  ConcreteIterator.h  FindAvailableStaff.h  Gardener.cpp  Gardener.h  InfoDesk.cpp  InfoDesk.h  Iterator.h  IteratorDemo.cpp  Manager.cpp  Manager.h  SalesStaff.cpp  SalesStaff.h  Staff .cpp  Staff .h  Staff.cpp  Staff.h  StaffState.cpp  StaffState.h
tests/: test_customer.cpp  test_main.cpp  test_nursery.cpp  test_staff.cpp
